fixed beanMapper & added swagger,web config